[package]
name = "lucky_numbers"
version = "0.1.0"
authors = ["Rico A. Beti <rico.beti@silentbyte.com>"]
edition = "2018"

[dependencies]
lambda_runtime = "0.2.1"
log = "0.4.8"
rand = "0.7.2"
serde = { version = "1.0.104", features = ["derive"] }
serde_derive = "1.0.104"
serde_json = "1.0.44"
simple_logger = "1.3.0"
